--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header-container">
             <div class="logo">
                 <i class="fas fa-microchip"></i>
-                <h1>JARELUX</h1>
+                <h1>ELECTRONIC</h1>
             </div>
             <nav class="nav">
                 <ul>
@@ -191,7 +191,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 JARELUX. Todos los derechos reservados.</p>
+                <p>&copy; 2026 JARELUX. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
@@ -199,3 +199,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
